--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,16 +4,14 @@ html
     title= title
     link(rel="stylesheet", href="/stylesheets/style.css")
   body
-
-    <!-- EXPRESS APP MAIN TEMPLATE - INDEX FILE - (EMBER APP MAIN TEMPLATE) -->   
     block content
     
-    <!-- EMBER APP OTHER TEMPLATES -->
+    <!-- EMBER APP TEMPLATES -->
     include templates/home
     include templates/play
     include templates/score
    
-    <!-- EMBER AND PARSE APP LIBS -->
+    <!-- EMBER AND PARSE LIBS -->
     <script src="javascripts/libs/jquery-1.10.2.js"></script>
     <script src="javascripts/libs/handlebars-1.1.2.js"></script>
     <script src="javascripts/libs/ember-1.4.0.js"></script>
