--- a/views/templates/play.jade
+++ b/views/templates/play.jade
@@ -1,4 +1,6 @@
 
+//- EMBER APP - PLAY TEMPLATE 
+
 script(type="text/x-handlebars", data-template-name="play")  
   
   {{#unless view.isLastFriend}}
