--- a/views/templates/home.jade
+++ b/views/templates/home.jade
@@ -19,6 +19,6 @@ script(type="text/x-handlebars", data-template-name="home")
 
   div(id="buttonContainer")
     <input id="button" type="submit" value="Lets Play!" {{action "goPlay" target="view"}}><br>
-    <input id="button" type="submit" value="Log out" {{action "logout" target="view"}}>
+    <input id="button" type="submit" value="Try another user!" {{action "logout" target="view"}}>
   
   {{/unless}}
